various fixed and improvements